--- a/Drum Kit Completed/styles.css
+++ b/Drum Kit Completed/styles.css
@@ -1,13 +1,13 @@
 body {
   text-align: center;
-  background-color: #283149;
+  background-color: #4f3844;
 }
 
 h1 {
   font-size: 5rem;
   color: #DBEDF3;
   font-family: "Arvo", cursive;
-  text-shadow: 3px 0 #DA0463;
+  text-shadow: 6px 0 #DA0463;
 
 }
 
